--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
       <section id="banner">
         <div class="left-bg">
             
-            <img src="..\Trabajo Final\img\VRG.png" alt="Vanesa" class="img" width="400" height="400"> 
+            <img src="..\img\VRG.png" alt="Vanesa" class="img" width="400" height="400"> 
         </div> 
         </div>
         <div class="right-bg">
@@ -174,13 +174,13 @@
     <fieldset> 
         <h3>HTML & CSS</h3>
         <p>Top 10 de Películas</p>
-        <a class="prj-link" href="..\Trabajo Final\page2.html" target="_blank"><i
+        <a class="prj-link" href="https://vanesargamarra.github.io/Trabajo%20Final/page2.html" target="_blank"><i
                 class="fa-brands fa-github"></i> Ver proyecto </a>
             </fieldset>
             <fieldset> 
         <h3>HTML & CSS</h3>
         <p>Tutorial</p>
-        <a class="prj-link" href="..\Trabajo Final\page3.html" target="_blank"><i
+        <a class="prj-link" href="https://vanesargamarra.github.io/Trabajo%20Final/page3.html" target="_blank"><i
                 class="fa-brands fa-github"></i> Ver Proyecto </a>
                
         </fieldset>
