Agregue el enlace del proyecto 1

--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
     <fieldset> 
         <h3>HTML & CSS</h3>
         <p>Top 10 de Películas</p>
-        <a class="prj-link" href="https://vanesargamarra.github.io/Trabajo%20Final/page2.html" target="_blank"><i
+        <a class="prj-link" href="https://vanesargamarra.github.io/finalpaliculas.github.io/" target="_blank"><i
                 class="fa-brands fa-github"></i> Ver proyecto </a>
             </fieldset>
             <fieldset> 
