Cambios en los enlaces

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
       <section id="banner">
         <div class="left-bg">
             
-            <img src="..\img\VRG.png" alt="Vanesa" class="img" width="400" height="400"> 
+            <img src="\img\VRG.png" alt="Vanesa" class="img" width="400" height="400"> 
         </div> 
         </div>
         <div class="right-bg">
@@ -180,7 +180,7 @@
             <fieldset> 
         <h3>HTML & CSS</h3>
         <p>Tutorial</p>
-        <a class="prj-link" href="https://vanesargamarra.github.io/Trabajo%20Final/page3.html" target="_blank"><i
+        <a class="prj-link" href="tutorialTF.github.io" target="_blank"><i
                 class="fa-brands fa-github"></i> Ver Proyecto </a>
                
         </fieldset>
