agregue enlace foto

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
       <section id="banner">
         <div class="left-bg">
             
-            <img src="\img\VRG.png" alt="Vanesa" class="img" width="400" height="400"> 
+            <img src="https://www.facebook.com/photo/?fbid=6001543713209680&set=a.148095108554599" alt="Vanesa" class="img" width="400" height="400"> 
         </div> 
         </div>
         <div class="right-bg">
