--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
       <section id="banner">
         <div class="left-bg">
             
-            <img src="https://www.facebook.com/photo/?fbid=6001543713209680&set=a.148095108554599" alt="Vanesa" class="img" width="400" height="400"> 
+            <img src="q2-1.fna.fbcdn.net/v/t39.30808-6/308676104_6001543666543018_5643716372837309310_n.jpg?_nc_cat=106&ccb=1-7&_nc_sid=09cbfe&_nc_ohc=tfUYVOiAgL0AX_cfHTi&_nc_ht=scontent.fcnq2-1.fna&oh=00_AfBOV4PZrgY4ELVtwvsjBweWbBT1Z_LngZuUhuo9NUDRaw&oe=63FD6617" alt="Vanesa" class="img" width="400" height="400"> 
         </div> 
         </div>
         <div class="right-bg">
