--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
     <hr />
     <div class="name">
     <h1>Vanesa Roxana  Gamarra</h1>
-    <p>Barranqueras, Chaco</p>
+    <p>Desarrollo Web</p>
     <p><a href="mailto:vanesaroshanajgamarra@gmail.com">Email</a></p>
     </div>
     <hr />
@@ -106,7 +106,7 @@
       <section id="banner">
         <div class="left-bg">
             
-            <img src="https://drive.google.com/uc?export=1kW8MSBedFtkmNFy--_pG0sdIRFlqjl2H" height="400"> 
+            <img src="https://drive.google.com/file/d/1kW8MSBedFtkmNFy--_pG0sdIRFlqjl2H/view?usp=sharing" height="400"> 
         </div> 
         </div>
         <div class="right-bg">
