--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
       <section id="banner">
         <div class="left-bg">
             
-            <img src="https://drive.google.com/file/d/1kW8MSBedFtkmNFy--_pG0sdIRFlqjl2H/view?usp=sharing" height="400"> 
+            <img src=".\img\VRG.png " height="400"> 
         </div> 
         </div>
         <div class="right-bg">
