--- a/page3.html
+++ b/page3.html
@@ -4,6 +4,7 @@
 <title>CSS Template</title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
+ <link rel="shortcut icon" href="favicon.png" type="image/x-icon">
 <style>
 @import url('https://fonts.googleapis.com/css2?family=Signika+Negative&display=swap');  
 * {
