--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
       <section id="banner">
         <div class="left-bg">
             
-            <img src=".\img\VRG.png " height="400"> 
+            <img src=".\img\vanesa.png " height="400"> 
         </div> 
         </div>
         <div class="right-bg">
